# dcm2niiw

./: LICENSE  README.md  justfile  pyproject.toml
src/dcm2niiw/: __init__.py  __main__.py  defaults.py  headers.py  wrapper.py
src/dcm2niix_pyw/: __init__.py
